# gcrs

./: .gitignore  LICENSE  README.md  k8s.yaml  models.py  pyproject.toml
api/: main.py
app/: logger.py  logtest.py  models.py
app/api/: main.py
app/core/: scanner.py
gcrs/: logger.py  models.py
gcrs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
gcrs/api/: main.py
gcrs/core/: scanner.py
output/: string
scripts/: run
