[project]
name = "gcrs"
version = "0.1.0"
description = "Green Cloud Repository Scanner"
authors = [
    { name = "Crestone Technology", email = "info@crestone.tech" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "pytest-cov>=6.0",
]

[tool.pytest.ini_options]
addopts = "-q"
