[project]
name = "gcrs"
version = "0.1.0"
description = "Green Cloud Repository Scanner"
authors = [
    { name = "Crestone Technology", email = "info@crestone.tech" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "pytest-cov>=6.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
addopts = "-q"

[tool.ruff]
# Set the maximum line length to 100 characters
line-length = 100

# Enable specific rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Ignore specific rules (add more as needed)
ignore = [
    "E501",  # line too long (handled by formatter)
]

# Exclude common directories
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".eggs",
    "*.egg-info",
    "dist",
    "build",
    "logs",
]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Use 4 spaces for indentation
skip-magic-trailing-comma = false
# Line ending style
line-ending = "auto"

[tool.ruff.isort]
# Use a single line for imports when possible
force-single-line = false
# Known first-party packages (your app package)
known-first-party = ["gcrs"]
